# LED3DMap

./: .eslintrc.js  README.md  nuxt.config.js  package.json  tailwind.config.js  tsconfig.json
.github/workflows/: ci.yml
assets/: demo.webm
components/: Button.vue  NumberInput.vue  ThreePreview.vue  VideoOutput.vue  VideoProcess.vue  VideoSelect.vue  computeWorker.ts  workerPool.ts
layouts/: default.vue
pages/: index.vue
plugins/: repeat-click.ts
rs/: Cargo.toml
rs/.cargo/: config.toml
rs/led-map/: Cargo.toml
rs/led-map-wasm/: Cargo.toml
rs/led-map-wasm/src/: lib.rs  utils.rs
rs/led-map/src/: lib.rs  main.rs
static/: LightMapper.ino
types/: misc.d.ts
