[package]
name = "led-map-wasm"
version = "0.1.0"
authors = ["lights0123 <developer@lights0123.com>"]
edition = "2018"
license = "AGPL-3.0-only"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []

[dependencies]
wasm-bindgen = "0.2.63"
led-map = { path = "../led-map" }
image = "0.23.12"
imageproc = "0.22.0"
js-sys = "0.3.46"
serde-wasm-bindgen = "0.1.3"
serde = { version = "1.0", features = ["derive"] }
wasm-typescript-definition = "0.1.4"
linregress = "0.4.0"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#
# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
wee_alloc = { version = "0.4.5", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.13"
