[package]
name = "led-map"
version = "0.1.0"
authors = ["lights0123 <developer@lights0123.com>"]
edition = "2018"
license = "AGPL-3.0-only"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23.12"
imageproc = "0.22.0"
num-traits = "0.2.14"
